gcc/testsuite/rust/rustc/ui/const-generics/ice-118285-fn-ptr-value.rs
struct Checked<const F: fn(usize) -> bool>;
// { dg-error "" "" { target *-*-* } .-1 }
fn not_one(val: usize) -> bool { val != 1 }
const _: Checked<not_one> = Checked::<not_one>;
fn main() {}

